# array-map

./: .gitignore  Cargo.toml  DEVELOPER.md  README.md  SmartModule.toml
data/: simple.json  uscourts-gov.json
src/: lib.rs
